yoshimi 1.5.8 M

2018-9-12 Will
* Added CLI placeholder for formant editor.
* Added filter category to prompt.

2018-9-11 Will
* Added CLI placeholder for freemode envelopes.
* Added freemode status to prompt.

2018-9-10
* CLI lfos & envelopes remember last type used.
  amplitude, frequency, filter bandwidth
* CLI prompt now shows type and status of these.

2018-9-9 Will
* Optimised some CLI selection routines.
* Improved CLI prompt information.
* Further refinements to CLI controls and messages.
* CLI LFO & Envelope enables inplemented.
* Simplifed ON/OFF controls in CLI lists.
  Can still actually use any of:
  ENable, ON, YEs or DIsable, OFf, NO
* Corrected wrong CLI kitmode help entry.

2018-9-8 Will
* Added CLI placeholders for LFOs and filters.
* Completed CLI controls for LFOs.
* CLI filters done except formant editor.

2018-9-7 Will
* Found and mitigated cause of major memory leak.
  In XML - needs more work to resolve completely.
* Startup now counts banks and instruments seen.
* All instances now use a single bank file.
  They can still get out of sync per session but
  there is no longer a risk of bank corruption.

2018-9-6 Will
* Bugfix: Occasional segfaults starting new instances.
  Caused by call crossing threads :(
* Moved currentRoot and currentBank from Bank to Config
  Where they always should have been :@)

2018-9-5 Will
* BugFix: Reverb type not updating bandwidth control.
  Thanks to Jesper for finding the cause.
  Also some GUI effect 'switches' not set by CLI.
* BugFix: (ancient) Reverb bandwidth control *value*
  GUI not set to default when enabled.

2018-9-4 Will
* BugFix: instances not showing correct root list.
  GuiThreadMsg for banks in wrong place.
  May have caused crash when opening instances.

2018-9-3 Will
* BugFix: Crash if instrument name just 4 digits.
  Thanks to Kristian for the hint :)

2018-9-1 Will
* BugFix: GUI not setting resonance points.

2018-8-31 Will
* Added CLI SubSynth bandwidth envelope.
* Adjusted help lists.