@@ -1,14 +1,4 @@
 
-Potential Bug: Changing part name while aplaymidi running with yoshi sometimes segfaults with:
-    The futex facility returned an unexpected error code.Aborted
-Seems to be a GUI problem, it freezes with Rosegarden but all functions still work.
-No issue at all if names changed from the CLI!
-
-Can go a long time before showing up :(
-
-Doesn't seem to happen with V1.5.3
- (part number follows instrument loads after this version)
-
 BUG! Multi instances produce jack errors if have been opened when main instance closed - been there since V 1.4.1 :(
 
 BUG! If jack is selected for audio but there are no physical ports Yoshimi quits with CLI warning - should run with gui warning as well, or better still loop back to try alsa.
@@ -37,8 +27,6 @@ Do a dual scan for banks so that IDd ones are found first, then any new ones pic
 Pasting effect doesn't update effect title.
 
 Requested: revise window states so engines etc can be made auto open.
-
-NRPN channels?
 
 Expand MIDI-learn to include:
     learn groups
