@@ -279,13 +279,13 @@ string filterlist [] = {
     "Q <n>",                "Q factor",
     "Velocity <n>",         "velocity sensitivity",
     "SLope <n>",            "velocity curve",
-    "Gain <n>",             "gain",
+    "Gain <n>",             "overall amplitude",
     "TRacking <n>",         "frequency tracking",
     "Range <s>",            "extended tracking (ON, {other})",
     "CAtegory <s>",         "Analog, Formant, State variable",
     "STages <n>",           "filter stages (1 to 5)",
-    "TYpe <s>",             "category dependent",
-    "-  analog",            "",
+    "TYpe <s>",             "category dependent - not formant",
+    "-  analog","",
     "  l1",                 "one stage low pass",
     "  h1",                 "one stage high pass",
     "  l2",                 "two stage low pass",
@@ -295,11 +295,28 @@ string filterlist [] = {
     "  peak",               "two stage peak",
     "  lshelf",             "two stage low shelf",
     "  hshelf",             "two stage high shelf",
-    "-  state variable",    "",
+    "-  state variable","",
     "  low",                "low pass",
     "  high",               "high pass",
     "  band",               "band pass",
     "  stop",               "band stop",
+    "","",
+    "formant editor","",
+    "Direct <n>",           "bypass LFOs, envelopes",
+    "Center <n>",           "center frequency of sequence",
+    "Range <n>",            "octave range of formants",
+    "Expand <n>",           "stretch overal sequence time",
+    "Lucidity <n>",         "clarity of vowels",
+    "Morph <n>",            "speed of change between formants",
+    "Size <n>",             "number of vowels in sequence",
+    "Count <n>",            "number of formants in vowels",
+    "Vowel <n>",            "vowel being processed",
+    "Point <n1> <n2>",      "vowel n1 at sequence position n2",
+    "Item",                 "formant being processed",
+    "per formant","",
+    "  Frequency <n>",      "Center of formant frequency",
+    "  Q <n>",              "bandwidth of formant",
+    "  Gain <n>",           "amplitude of formant",
     "end"
 };
 
